# Secretary-AI

./: .env.example  .gitignore  README.md  database-erd.txt  main.py  pyproject.toml  requirements.txt
discord_bot/: README.md  bot.py  requirements.txt
landing/2026-02-09 19.14.07 Andy Shang's Zoom Meeting/: meeting_saved_closed_caption.txt
landing/full/: INGESTED_full_08-02-2026_secretary_ai_introduction.txt
transcript_integrator/: __init__.py  file_watcher.py  integrator.py  models.py
